# robotics-tree

./: .gitignore  Cargo.toml  index.css  index.html  screws.html  sidebar.css  style.css
.github/workflows/: static-site.yml
hl/: Cargo.toml
hl/src/: lib.rs
hl/src/lexers/: cpp.rs  mod.rs  raw.rs
items/building/: 1-abuildingc.md  1-installingmotor.md  2-dde.md  2-drivetrain.md  abuildingc.md
items/main/: 1-abc.md  2-abc2.md  abc.md  abc2.md
items/programming/: 1-aprogrambc.md  2-programdrivetrain.md  aprogrambc.md
items/sidebar/: 1-screws.md  screws.md
src/: items.rs  main.rs  render_markdown.rs  validate.rs
static/: index.css  style.css
templates/: _layout.html  index.html  sidebar_page.html
