[package]
edition = "2021"
name = "robotics-tree"
version = "0.1.0"

[dependencies]
askama = { version = "0.11" }
comrak = { version = "0.14", default-features = false }
dircpy = "0.3"
html5ever = "0.26"
itertools = "0.10"
once_cell = "1"
scraper = "0.13"
serde = { version = "1", features = ["derive"] }
toml = "0.5"
